fix(theme): fix spacing issue

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -25,7 +25,6 @@ main {
 		}
 	}
 	.list-container {
-		margin-top: 1em;
 		display: flex;
 		justify-content: center;
 	}
